[gd_scene load_steps=7 format=3 uid="uid://bphmj6k63rmak"]

[ext_resource type="Texture2D" uid="uid://d24n8pu71ocoy" path="res://assets/ui/icons/actionfields/attack_icon.png" id="1_rcde3"]
[ext_resource type="Script" uid="uid://mr8wdonfk4hi" path="res://scripts/ui/combat/action_field_preview.gd" id="1_sqgmb"]
[ext_resource type="Texture2D" uid="uid://nv5at8hyrfd4" path="res://assets/ui/panels/9patch fill basic 400x.png" id="2_gefwx"]
[ext_resource type="Texture2D" uid="uid://cr36mbqgkl0m3" path="res://assets/ui/icons/actionfields/targets_icon.png" id="2_sqgmb"]
[ext_resource type="Texture2D" uid="uid://kep0f0dxbib2" path="res://assets/ui/panels/9patch stroke basic 400x.png" id="5_3p55b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gefwx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ActionFieldPreview" type="PanelContainer"]
custom_minimum_size = Vector2(128, 128)
theme_override_styles/panel = SubResource("StyleBoxFlat_gefwx")
script = ExtResource("1_sqgmb")

[node name="FillTexture" type="NinePatchRect" parent="."]
layout_mode = 2
mouse_filter = 1
texture = ExtResource("2_gefwx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionTypeIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/TopSection"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_rcde3")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ActionNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Action Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
alignment = 1

[node name="ChargesLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomSection"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 28
text = "2 Per Turn"
vertical_alignment = 2

[node name="TargetsIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/BottomSection"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_sqgmb")

[node name="TargetsLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomSection/TargetsIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -16.0
offset_right = 6.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "3"
vertical_alignment = 2

[node name="StrokeTexture" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("5_3p55b")
